Fix small screen on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,4 +21,8 @@
 
 html, body { @apply bg-white text-slate-900; }
 
+html {
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+}
 
